main.yml chanded

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           username: root
           key: ${{ secrets.SERVER_SECRET_KEY }}
           script: 
-            git clone https://jyldyz0610:${{ secrets.GITHUBTOKEN }}@github.com/jyldyz0610/kubernetes_server
+            git clone https://jyldyz0610:${{ secrets.GITHUBTOKEN }}@github.com/jyldyz0610/kubernetes_server.git
             cd kubernetes_hetzner; for i in $(ls); do echo $i; kubectl apply -f $i; done;|
             kubectl get pods
             kubectl get ingress
