--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           key: ${{ secrets.SERVER_SECRET_KEY }}
           script: |
             git clone https://jyldyz0610:${{ secrets.GITHUBTOKEN }}@github.com/jyldyz0610/kubernetes_server.git
-            cd kubernetes_hetzner
+            cd kubernetes_server/kubernetes_hetzner
             for i in $(ls); do
               echo $i
               kubectl apply -f $i
